# openvgui

./: CMakeLists.txt  wscript
src/platform/posix/: fileimage.cpp  vfontdata.cpp
src/platform/win32/: Surface.cpp  vfontdata.h
src/vgui/: vgui.cpp
